Code cleanup (#385)